[package]
name = "rs_blank_example"
description = "Example implementation of the rs_blank template"
version = "0.1.0"
authors = ["Christoph <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/devplaybooks/rs_blank_example.git"
homepage = "https://github.com/devplaybooks/rs_blank"
edition = "2021"
license = "GPL-3.0"
exclude = [".devcontainer/*", ".github/workflows/*", "examples/*", ".gitignore", "Cargo.lock"]

[lib]
name = "rs_blank_example"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
